# ai-pr-review-test

./: Cargo.toml  README.md  flake.nix
src/: main.rs  power_menu.rs
src/widget/: clock.rs  display.rs  mod.rs  power_menu.rs  quit.rs
src/widget/hyprland/: workspaces.rs
